code/python/tmp.txt
make: Entering directory '/home/ubuntu/znnphi_interface/code/znet'
rm -rf out
mkdir -p out
mkdir -p out/weights
python src/znet_generator/main.py /home/ubuntu/znnphi_interface/code/znet/src/python/pznet/.tmp/net.json /home/ubuntu/znnphi_interface/code/znet/nets/unet.h5 src/generated/znet.cpp
Parsing the network spec...
Loading the weights...
Generating the network...
Generating constructors...
Generating foward pass...
Writing to file...
In file included from /home/ubuntu/znnphi_interface/code/include/znn/layer/layers.hpp(7),
                 from src/generated/znet.cpp(4):
/home/ubuntu/znnphi_interface/code/include/znn/layer/eltwise.hpp(79): error: identifier "MODE_MAX" is undefined
  case MODE_MAX:
       ^

compilation aborted for src/generated/znet.cpp (code 2)
Makefile:92: recipe for target 'out/znet.o' failed
make: *** [out/znet.o] Error 2
make: Leaving directory '/home/ubuntu/znnphi_interface/code/znet'
2 36 40 18 96
2 48 48 18 48
2 28 32 18 192
2 64 64 18 24
2 80 80 18 12
